Basic consumer loop working